fix bug when rename user on jenkins
